KSCM-2069:Fix for Header alignment issue in CM with support title.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69024 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -651,10 +651,7 @@ section.uif-disclosure .uif-headerText .uif-headerText-span [class*='icon-caret-
  * This is the end of the KRAD tabs workaround.
  */
 
-/* This is overriding the krad styling for supportTitle with header KSCM-2056 */
-/* And #KS-CourseView-Header .uif-viewHeader-supportTitle if issues result */
-.uif-viewHeader-supportTitle {
-  font-size: 0.75em;
-  color: #666666;
-  display:block;
+/* styling for supportTitle with header KSCM-2069 */
+#KS-CourseView-Header{
+    padding-left: 6px;
 }
